2002-08-22  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Fix typo ... missing closing brace under
	windoze. Reported by Alex Stockdale.

2002-08-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: ([-replacementObjectForPortCoder:])
	Documented method and removed unused/unwanted code dealing with
	NSDistantObject (NSDistantObject overrides the method).

2002-08-20  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSObject.m: Fix silly typo.

2002-08-20  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSConnection.m: (-removeProxy:) Remove unbalanced release.

2002-08-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCountedSet.m:
	* Source/GSFileHandle.m:
	* Source/NSArchiver.m:
	* Source/NSData.m:
	* Source/NSDistributedNotificationCenter.m:
	* Source/NSHashTable.m:
	* Source/NSMapTable.m:
	* Source/NSObjCRuntime.m:
	* Source/NSObject.m:
	* Source/NSPortCoder.m:
	* Source/NSScanner.m:
	* Source/NSString.m:
	* Source/Unicode.m:
	* Source/UnixFileHandle.m:
	* Source/WindowsFileHandle.m:
	* Source/callframe.m:
	* Source/cifframe.m:
	* Source/mframe.m:
	Fix trivial typos and spelling errors pointed out by David Ayers.

2002-08-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCountedSet.m:
	* Source/NSAutoreleasePool.m:
	* Source/NSCharacterSet.m:
	* Source/NSCountedSet.m:
	* Source/NSData.m:
	* Source/NSDebug.m:
	* Source/NSDictionary.m:
	* Source/NSFileHandle.m:
	* Source/NSLock.m:
	* Source/NSNull.m:
	* Source/NSNumber.m:
	* Source/NSObject.m:
	* Source/NSPipe.m:
	* Source/NSScanner.m:
	* Source/NSSerializer.m:
	* Source/NSSet.m:
	* Source/NSString.m:
	* Source/NSThread.m:
	* Source/NSTimeZone.m:
	* Source/Additions/GSMime.m:
	* Headers/gnustep/base/NSBundle.h:
	* Headers/gnustep/base/NSRange.h:
	* Headers/gnustep/base/NSSet.h:
	Modify comments to include gsdoc documentation for autogsdoc.
	This completes the transfer of all gsdoc documentation into
	the source code.